@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003-2006 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: persistence.scm,v 1.72 2006/12/26 09:42:13 bizenn Exp $
+;; $Id: persistence.scm,v 1.72.2.1 2007/01/11 05:41:42 bizenn Exp $
 
 (define-module kahua.persistence
   (use srfi-1)
@@ -632,7 +632,11 @@
   (is-a? obj <kahua-proxy>))
 
 (define-method realize-kahua-proxy ((proxy <kahua-proxy>))
-  (find-kahua-instance (ref proxy 'class) (ref proxy 'key)))
+  (let ((ident (slot-ref proxy 'key))
+	(class (slot-ref proxy 'class)))
+    (if (integer? ident)
+	(kahua-instance class ident)
+	(find-kahua-instance class ident))))
 
 ;; The bottom-level writer ----------------------------------------
 ;;   write-kahua-instance calls kahua-write.
@@ -686,40 +690,53 @@
   (kahua-object2-write obj port))
 
 ;; serialization
+(define delimit (cut write-char #\space))
+
+(define (kahua-atom? v)
+  (any (cut is-a? v <>)
+       (list <boolean> <number> <string> <symbol> <keyword>)))
+
 (define (serialize-value v)
   (let1 v (%sanitize-object v)
     (cond
-     ((any (cut is-a? v <>)
-	   (list <boolean> <number> <string> <symbol> <keyword>))
-      (write v) (display " "))
-     ((null? v) (display "()"))
-     ((pair? v)
-      (display "(")
+     ((kahua-atom? v) (write v))
+     ((list? v)                    (serialize-sequence v))
+     ((vector? v) (write-char #\#) (serialize-sequence v))
+     ((pair? v) ; dotted list
+      (write-char #\()
       (let loop ((v v))
-	(cond ((null? v))
-	      ((pair? v) (serialize-value (car v)) (loop (cdr v)))
-	      (else (display " . ") (serialize-value v))))
-      (display ")"))
-     ((vector? v)
-      (display "#(")
-      (for-each serialize-value v)
-      (display ")"))
+	(cond ((pair? v)
+	       (serialize-value (car v))
+	       (delimit)
+	       (loop (cdr v)))
+	      (else (display ". ") (serialize-value v))))
+      (write-char #\)))
      ((kahua-persistent-base? v)
       (display "#,(kahua-proxy ")
       (display (class-name (class-of v)))
-      (display " ")
-      (write (key-of v))
-      (display " )"))
+      (delimit)
+      (write (kahua-persistent-id v))
+      (write-char #\)))
      ((kahua-proxy? v)
       (display "#,(kahua-proxy ")
-      (display (class-name (ref v 'class)))
-      (display " ")
-      (write (ref v 'key))
-      (display " )"))
+      (display (class-name (slot-ref v 'class)))
+      (delimit)
+      (write (slot-ref v 'key))
+      (write-char #\)))
      ((kahua-wrapper? v)
-      (serialize-value (ref v 'value)))
+      (serialize-value (slot-ref v 'value)))
      (else
       (error "object not serializable:" v)))))
+
+(define (serialize-sequence seq)
+  (write-char #\()
+  (fold (lambda (e thunk)
+	  (thunk)
+	  (serialize-value e)
+	  delimit)
+	(lambda () #f)
+	seq)
+  (write-char #\)))
 
 (define (kahua-serializable-object? v)
   (or (any (cut is-a? v <>)
